Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59907

Lazily disconnect connections not authenticating to memcached

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown
    • KV 2023-4

    Description

      Disconnect clients which have been connected to the server for more than 5 minutes without authenticated. The disconnect logic should be lazily and happen as part of accepting new clients (and not by adding a timer per connection)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty