MB-59907: (Lazily) disconnect unauthenticated connections

As part of accepting new connections we'll try to disconnect
connections thats been alive for more than 5 minutes and
not yet authenticated.

Change-Id: I685a94862909272c09ed7cfbea5e2844ddfd54f2
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/201795
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>